===============

compiling:
- added ncurses to the readline entries in the make/make.* files

interface:
- new parameter "solinfeasible" for constraint handler callback methods ENFOLP and ENFOPS
- new method SCIPgetVerbLevel()

parameters:
- new parameter "reading/zplreader/changedir" to control behavior of path switching of ZIMPL file reader
- new parameter "propagating/abortoncutoff"


SCIP version 0.82
=================

compiling:
- removed ncurses and pthread libraries from the Makefile; pthread is now only linked if CPLEX is used

interface:
- new method SCIPsolveProbingLPWithPricing()
- new methods SCIPcolGetMinPrimsol() and SCIPcolGetMaxPrimsol()
- new method SCIPgetColRedcost()
- new method SCIPvarGetRootRedcost()
- new methods SCIPgetLPRootObjval(), SCIPgetLPRootColumnObjval(), and SCIPgetLPRootLooseObjval()
- new methods SCIPchgVarLbRoot() and SCIPchgVarUbRoot()
- new method SCIPinRepropagation()
- new methods SCIPgetAvgPseudocostScore(), SCIPgetAvgPseudocostScoreCurrentRun(), SCIPgetAvgConflictScore(),
  SCIPgetAvgConflictScoreCurrentRun(), SCIPgetAvgInferenceScore(), SCIPgetAvgInferenceScoreCurrentRun(),
  SCIPgetAvgCutoffScore(), and SCIPgetAvgCutoffScoreCurrentRun()
- new methods SCIPaddDialogInputLine() and SCIPaddDialogHistoryLine()
- method SCIPgetNConflictClausesFound() renamed to SCIPgetNConflictConssFound()
- method SCIPgetNConflictClausesFoundNode() renamed to SCIPgetNConflictConssFoundNode()
- method SCIPgetNConflictClausesApplied() renamed to SCIPgetNConflictConssApplied()
- new method SCIPgetFocusDepth()
- methods SCIPisLbBetter() and SCIPisUbBetter() have an additional parameter and slightly different meaning
  (they now compare the bound improvement *relatively* to the width of the domain and the bound itself)
- new solution status code SCIP_STATUS_STALLNODELIMIT
- slightly modified semantics of the CONSINITLP callback in the constraint handlers